# polyshifter

./: README.md  pyproject.toml
src/polyshifter/: __init__.py  adapters.py  cli.py  geometry.py  main.py  models.py  services.py  visual.py
tests/: geometry_test.py  params.py  services_test.py
