[project]
name = "polyshifter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrewserg", email = "sergienkoandrew9922@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
]

[project.scripts]
polyshifter = "polyshifter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
